--- a/ciphers/public/index.html
+++ b/ciphers/public/index.html
@@ -29,5 +29,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
+    <footer><a class='footer-link' href='https://github.com/SligZ7/Ciphers'>Github</a></footer>
   </body>
 </html>
